--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,5 +28,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script src="https://cdn.rawgit.com/serratus/quaggaJS/0420d5e0/dist/quagga.min.js"></script>
+    <script src="scanner.js"></script>
   </body>
 </html>
